# ExamCPP_OOP

./: CMakeLists.txt  main.cpp
src/: AbstractParticipant.cpp
src/headers/: AbstractParticipant.h  Cat.h  Human.h  Obstacle.h  Robot.h  RunningRoad.h  Wall.h
test/: examTest.cpp  examTest.h
